--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -27,7 +27,7 @@ variables:
     cdn_endpoint: '$(UAT_CDN_ENDPOINT)'
     cdn_profile: '$(UAT_CDN_PROFILE)'
     resource_group: '$(UAT_RESOURCE_GROUP)'
-    storage_account: '$(UAT_STORAGE_ACCOUNT)'
+    storage_account: '$(UAT_STORAGE_ACCOUNT_NAME)'
 
     react_app_url_cdn: '$(UAT_REACT_APP_URL_CDN)'
 
@@ -58,7 +58,7 @@ variables:
     cdn_endpoint: '$(PROD_CDN_ENDPOINT)'
     cdn_profile: '$(PROD_CDN_PROFILE)'
     resource_group: '$(PROD_RESOURCE_GROUP)'
-    storage_account: '$(PROD_STORAGE_ACCOUNT)'
+    storage_account: '$(PROD_STORAGE_ACCOUNT_NAME)'
 
     react_app_url_cdn: '$(PROD_REACT_APP_URL_CDN)'
 
