--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -30,6 +30,7 @@ variables:
     storage_account: '$(UAT_STORAGE_ACCOUNT)'
 
     react_app_url_cdn: '$(UAT_REACT_APP_URL_CDN)'
+    react_app_products_asset: '$(UAT_REACT_APP_URL_CDN)'
 
     react_app_url_file_privacy_disclaimer: '$(UAT_REACT_APP_URL_FILE_PRIVACY_DISCLAIMER)'
     react_app_url_file_terms_and_conditions: '$(UAT_REACT_APP_URL_FILE_TERMS_AND_CONDITIONS)'
@@ -61,6 +62,7 @@ variables:
     storage_account: '$(PROD_STORAGE_ACCOUNT)'
 
     react_app_url_cdn: '$(PROD_REACT_APP_URL_CDN)'
+    react_app_products_asset: '$(PROD_REACT_APP_URL_CDN)'
 
     react_app_url_file_privacy_disclaimer: '$(PROD_REACT_APP_URL_FILE_PRIVACY_DISCLAIMER)'
     react_app_url_file_terms_and_conditions: '$(PROD_REACT_APP_URL_FILE_TERMS_AND_CONDITIONS)'
@@ -94,6 +96,7 @@ variables:
     storage_account: '$(DEV_STORAGE_ACCOUNT)'
 
     react_app_url_cdn: '$(DEV_REACT_APP_URL_CDN)'
+    react_app_products_asset: '$(DEV_REACT_APP_URL_CDN)'
 
     react_app_url_file_privacy_disclaimer: '$(DEV_REACT_APP_URL_FILE_PRIVACY_DISCLAIMER)'
     react_app_url_file_terms_and_conditions: '$(DEV_REACT_APP_URL_FILE_TERMS_AND_CONDITIONS)'
@@ -196,6 +199,7 @@ stages:
 
               REACT_APP_SPID_TEST_ENV_ENABLED: '$(spid_test_env_enabled)'
               REACT_APP_SPID_CIE_ENTITY_ID: '$(spid_cie_entity_id)'
+              REACT_APP_PRODUCTS_ASSET: '$(react_app_products_asset)'
 
               REACT_APP_URL_FE_ONBOARDING: '$(react_app_url_fe_onboarding)'
               REACT_APP_URL_FE_DASHBOARD: '$(react_app_url_fe_dashboard)'
