SELC - added new feature flag to menage visualization of banner - tbd texts

--- a/.env.test.local
+++ b/.env.test.local
@@ -20,3 +20,5 @@ REACT_APP_ANALYTICS_ENABLE=true
 REACT_APP_ANALYTICS_MOCK=true
 REACT_APP_ANALYTICS_DEBUG=false
 REACT_APP_MIXPANEL_TOKEN=DUMMY
+
+REACT_APP_BANNER_ENABLE=true
