--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router": "^5.2.1",
     "react-scripts": "5.0.0",
     "typescript": "^4.1.2",
+    "util": "^0.12.5",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
