SELC-3137 Setting to prepare for reading the new banner alert JSON

--- a/.env.development.local
+++ b/.env.development.local
@@ -5,6 +5,7 @@ REACT_APP_URL_CDN=https://dev.selfcare.pagopa.it
 REACT_APP_SPID_TEST_ENV_ENABLED=true
 REACT_APP_SPID_CIE_ENTITY_ID=xx_servizicie
 REACT_APP_PRODUCTS_ASSET=https://selfcare.pagopa.it/assets/products.json
+REACT_APP_LOGIN_ALERT_BANNER=https://selfcare.pagopa.it/assets/login-alert-message.json
 
 REACT_APP_URL_FE_ONBOARDING=http://selfcare/onboarding
 REACT_APP_URL_FE_DASHBOARD=http://selfcare/dashboard
@@ -24,5 +25,3 @@ REACT_APP_ANALYTICS_MOCK=true
 REACT_APP_ANALYTICS_DEBUG=false
 REACT_APP_MIXPANEL_TOKEN=DUMMY
 REACT_APP_ONETRUST_DOMAIN_ID=a8f58d7a-7f6a-4fe6-ac02-f95bac3876d4-test
-
-REACT_APP_BANNER_ENABLE=true
