fix test missing banner var

--- a/.env.test.local
+++ b/.env.test.local
@@ -3,6 +3,7 @@ REACT_APP_ENV=TEST
 REACT_APP_SPID_TEST_ENV_ENABLED=true
 REACT_APP_SPID_CIE_ENTITY_ID=xx_servizicie_test
 REACT_APP_PRODUCTS_ASSET=https://selfcare.pagopa.it/assets/products.json
+REACT_APP_LOGIN_ALERT_BANNER=https://selfcare.pagopa.it/assets/login-alert-message.json
 
 REACT_APP_URL_FE_ONBOARDING=http://selfcare/onboarding
 REACT_APP_URL_FE_DASHBOARD=http://selfcare/dashboard
