[SELC-3301] feat: Double URL management for each of the SPID identity providers

--- a/.env.development.local
+++ b/.env.development.local
@@ -13,6 +13,7 @@ REACT_APP_URL_FE_LANDING=http://selfcare/landing
 REACT_APP_URL_FE_ASSISTANCE=http://selfcare/assistance
 
 REACT_APP_URL_API_LOGIN=http://selfcare/auth
+REACT_APP_URL_API_LOGIN_SPID=http://selfcare-spid/auth
 
 REACT_APP_PAGOPA_HELP_EMAIL=assistenza@selfcare.it
 
