--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -41,6 +41,7 @@ variables:
     react_app_url_fe_assistance: '$(UAT_REACT_APP_URL_FE_ASSISTANCE)'
 
     react_app_url_api_login: '$(UAT_REACT_APP_URL_API_LOGIN)'
+    react_app_url_api_login_spid: '$(UAT_REACT_APP_URL_API_LOGIN_SPID)'
 
     react_app_login_alert_banner: '$(UAT_REACT_APP_LOGIN_ALERT_BANNER)'
 
@@ -75,6 +76,7 @@ variables:
     react_app_url_fe_assistance: '$(PROD_REACT_APP_URL_FE_ASSISTANCE)'
 
     react_app_url_api_login: '$(PROD_REACT_APP_URL_API_LOGIN)'
+    react_app_url_api_login_spid: '$(PROD_REACT_APP_URL_API_LOGIN_SPID)'
 
     react_app_login_alert_banner: '$(PROD_REACT_APP_LOGIN_ALERT_BANNER)'
 
@@ -111,6 +113,7 @@ variables:
     react_app_url_fe_assistance: '$(DEV_REACT_APP_URL_FE_ASSISTANCE)'
 
     react_app_url_api_login: '$(DEV_REACT_APP_URL_API_LOGIN)'
+    react_app_url_api_login_spid: '$(DEV_REACT_APP_URL_API_LOGIN_SPID)'
 
     react_app_login_alert_banner: '$(DEV_REACT_APP_LOGIN_ALERT_BANNER)'
 
@@ -215,6 +218,7 @@ stages:
               REACT_APP_LOGIN_ALERT_BANNER: '$(react_app_login_alert_banner)'
 
               REACT_APP_URL_API_LOGIN: '$(react_app_url_api_login)'
+              REACT_APP_URL_API_LOGIN_SPID: '$(react_app_url_api_login_spid)'
 
               REACT_APP_URL_PRIVACY_DISCLAIMER: '$(react_app_url_privacy_disclaimer)'
               REACT_APP_URL_TERMS_AND_CONDITIONS: '$(react_app_url_terms_and_conditions)'
