--- a/.env.development.local
+++ b/.env.development.local
@@ -2,6 +2,7 @@ REACT_APP_ENV=LOCAL_DEV
 
 REACT_APP_URL_CDN=https://dev.selfcare.pagopa.it
 
+REACT_APP_LOGIN_SPID_ENABLED=true
 REACT_APP_SPID_TEST_ENV_ENABLED=true
 REACT_APP_SPID_CIE_ENTITY_ID=xx_servizicie
 REACT_APP_PRODUCTS_ASSET=https://selfcare.pagopa.it/assets/products.json
