--- a/.env.test.local
+++ b/.env.test.local
@@ -1,5 +1,6 @@
 REACT_APP_ENV=TEST
 
+REACT_APP_LOGIN_SPID_ENABLED=true
 REACT_APP_SPID_TEST_ENV_ENABLED=true
 REACT_APP_SPID_CIE_ENTITY_ID=xx_servizicie_test
 REACT_APP_PRODUCTS_ASSET=https://selfcare.pagopa.it/assets/products.json
