[SELC-3301] feat: Double URL management for each of the SPID identity providers
* [SELC-3301] feat: Double URL management for each of the SPID identity providers

* [SELC-3301] feat: Reading the REACT_APP_LOGIN_SPID_ENABLED environment variable in order to use it as switch of feature

--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -41,9 +41,11 @@ variables:
     react_app_url_fe_assistance: '$(UAT_REACT_APP_URL_FE_ASSISTANCE)'
 
     react_app_url_api_login: '$(UAT_REACT_APP_URL_API_LOGIN)'
+    react_app_url_api_login_spid: '$(UAT_REACT_APP_URL_API_LOGIN_SPID)'
 
     react_app_login_alert_banner: '$(UAT_REACT_APP_LOGIN_ALERT_BANNER)'
 
+    react_app_login_spid_enabled: '$(UAT_REACT_APP_LOGIN_SPID_ENABLED)'
     spid_test_env_enabled: 'true'
     spid_cie_entity_id: 'xx_servizicie_test'
 
@@ -75,9 +77,11 @@ variables:
     react_app_url_fe_assistance: '$(PROD_REACT_APP_URL_FE_ASSISTANCE)'
 
     react_app_url_api_login: '$(PROD_REACT_APP_URL_API_LOGIN)'
+    react_app_url_api_login_spid: '$(PROD_REACT_APP_URL_API_LOGIN_SPID)'
 
     react_app_login_alert_banner: '$(PROD_REACT_APP_LOGIN_ALERT_BANNER)'
 
+    react_app_login_spid_enabled: '$(PROD_REACT_APP_LOGIN_SPID_ENABLED)'
     spid_test_env_enabled: 'false'
     spid_cie_entity_id: 'xx_servizicie'
 
@@ -111,9 +115,11 @@ variables:
     react_app_url_fe_assistance: '$(DEV_REACT_APP_URL_FE_ASSISTANCE)'
 
     react_app_url_api_login: '$(DEV_REACT_APP_URL_API_LOGIN)'
+    react_app_url_api_login_spid: '$(DEV_REACT_APP_URL_API_LOGIN_SPID)'
 
     react_app_login_alert_banner: '$(DEV_REACT_APP_LOGIN_ALERT_BANNER)'
 
+    react_app_login_spid_enabled: '$(DEV_REACT_APP_LOGIN_SPID_ENABLED)'
     spid_test_env_enabled: 'true'
     spid_cie_entity_id: 'xx_servizicie_test'
 
@@ -215,6 +221,8 @@ stages:
               REACT_APP_LOGIN_ALERT_BANNER: '$(react_app_login_alert_banner)'
 
               REACT_APP_URL_API_LOGIN: '$(react_app_url_api_login)'
+              REACT_APP_URL_API_LOGIN_SPID: '$(react_app_url_api_login_spid)'
+              REACT_APP_LOGIN_SPID_ENABLED: '$(react_app_login_spid_enabled)'
 
               REACT_APP_URL_PRIVACY_DISCLAIMER: '$(react_app_url_privacy_disclaimer)'
               REACT_APP_URL_TERMS_AND_CONDITIONS: '$(react_app_url_terms_and_conditions)'
