--- a/.env.test.local
+++ b/.env.test.local
@@ -1,5 +1,6 @@
 REACT_APP_ENV=TEST
 
+REACT_APP_LOGIN_SPID_ENABLED=true
 REACT_APP_SPID_TEST_ENV_ENABLED=true
 REACT_APP_SPID_CIE_ENTITY_ID=xx_servizicie_test
 REACT_APP_PRODUCTS_ASSET=https://selfcare.pagopa.it/assets/products.json
@@ -11,6 +12,7 @@ REACT_APP_URL_FE_LANDING=http://selfcare/landing
 REACT_APP_URL_FE_ASSISTANCE=http://selfcare/assistance
 
 REACT_APP_URL_API_LOGIN=http://selfcare/auth
+REACT_APP_URL_API_LOGIN_SPID=http://selfcare-spid/auth
 
 REACT_APP_PAGOPA_HELP_EMAIL=assistenza@selfcare.it
 
