--- a/.env.development.local
+++ b/.env.development.local
@@ -2,6 +2,7 @@ REACT_APP_ENV=LOCAL_DEV
 
 REACT_APP_URL_CDN=https://dev.selfcare.pagopa.it
 
+REACT_APP_LOGIN_SPID_ENABLED=true
 REACT_APP_SPID_TEST_ENV_ENABLED=true
 REACT_APP_SPID_CIE_ENTITY_ID=xx_servizicie
 REACT_APP_PRODUCTS_ASSET=https://selfcare.pagopa.it/assets/products.json
@@ -13,6 +14,7 @@ REACT_APP_URL_FE_LANDING=http://selfcare/landing
 REACT_APP_URL_FE_ASSISTANCE=http://selfcare/assistance
 
 REACT_APP_URL_API_LOGIN=http://selfcare/auth
+REACT_APP_URL_API_LOGIN_SPID=http://selfcare-spid/auth
 
 REACT_APP_PAGOPA_HELP_EMAIL=assistenza@selfcare.it
 
