--- a/.env.test.local
+++ b/.env.test.local
@@ -5,14 +5,15 @@ REACT_APP_SPID_TEST_ENV_ENABLED=true
 REACT_APP_SPID_CIE_ENTITY_ID=xx_servizicie_test
 REACT_APP_PRODUCTS_ASSET=https://selfcare.pagopa.it/assets/products.json
 REACT_APP_LOGIN_ALERT_BANNER=https://selfcare.pagopa.it/assets/login-alert-message.json
+REACT_APP_LOGIN_SPID_IDP_STATUS=https://dev.selfcare.pagopa.it/assets/spid_idp_status.json
 
 REACT_APP_URL_FE_ONBOARDING=http://selfcare/onboarding
 REACT_APP_URL_FE_DASHBOARD=http://selfcare/dashboard
 REACT_APP_URL_FE_LANDING=http://selfcare/landing
 REACT_APP_URL_FE_ASSISTANCE=http://selfcare/assistance
 
-REACT_APP_URL_API_LOGIN=http://selfcare/auth
-REACT_APP_URL_API_LOGIN_SPID=http://selfcare-spid/auth
+REACT_APP_URL_API_LOGIN=https://api.dev.selfcare.pagopa.it/spid-login/v1
+REACT_APP_URL_API_LOGIN_SPID=https://api.dev.selfcare.pagopa.it/spid/v1
 
 REACT_APP_PAGOPA_HELP_EMAIL=assistenza@selfcare.it
 
