--- a/package.json
+++ b/package.json
@@ -4,22 +4,24 @@
   "private": true,
   "homepage": "/auth/",
   "dependencies": {
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
-    "@mui/icons-material": "^5.0.3",
-    "@mui/material": "^5.0.2",
-    "@pagopa/mui-italia": "^0.8.12",
-    "@pagopa/selfcare-common-frontend": "^1.34.12",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/base": "^5.0.0-beta.28",
+    "@mui/icons-material": "^5.14.1",
+    "@mui/lab": "^5.0.0-alpha.157",
+    "@mui/material": "^5.14.1",
+    "@pagopa/mui-italia": "^1.1.0",
+    "@pagopa/selfcare-common-frontend": "^1.34.13",
+    "@types/node": "^12.20.19",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "env-var": "^7.1.1",
-    "i18next": "^21.6.14",
-    "react": "^17.0.2",
+    "i18next": "^23.7.11",
+    "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
     "react-datepicker": "^4.2.1",
-    "react-dom": "^17.0.2",
-    "react-i18next": "^11.16.1",
+    "react-dom": "^18.2.0",
+    "react-i18next": "^13.5.0",
     "react-router": "^5.2.1",
     "react-scripts": "5.0.0",
     "typescript": "^4.1.2",
@@ -56,11 +58,11 @@
   },
   "devDependencies": {
     "@craco/craco": "^6.4.3",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
     "@types/history": "^4.7.9",
-    "@types/jest": "^26.0.15",
+    "@types/jest": "^26.0.24",
     "@types/react-router": "^5.1.16",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
