[SELC-5227] feat: Reading values from global variables

--- a/.env.test.local
+++ b/.env.test.local
@@ -14,6 +14,10 @@ REACT_APP_URL_FE_ASSISTANCE=http://selfcare/assistance
 REACT_APP_URL_API_LOGIN=https://api.dev.selfcare.pagopa.it/spid-login/v1
 
 REACT_APP_PAGOPA_HELP_EMAIL=assistenza@selfcare.it
+REACT_APP_OT_SRC='dummyUrl',
+REACT_APP_OT_TOKEN='token',
+REACT_APP_OT_TERMS_AND_CONDITION_RESOURCE='dummyResourceTerms.json'
+REACT_APP_OT_TOS_RESOURCE='dummyResourceTos.json'
 
 REACT_APP_URL_PRIVACY_DISCLAIMER=http://selfcare/assets/privacy-disclaimer.pdf
 REACT_APP_URL_TERMS_AND_CONDITIONS=http://selfcare/assets/terms-conditions.pdf
