fixed deploy yml

--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -232,7 +232,7 @@ stages:
               REACT_APP_OT_SRC: '$(react_app_ot_src)'
               REACT_APP_OT_TOKEN: '$(react_app_ot_token)'
               REACT_APP_OT_TERMS_AND_CONDITION_RESOURCE: '$(react_app_ot_terms_condition_resource)'
-              REACT_APP_OT_TOS_RESOURCE: '(react_app_ot_tos_resource)'
+              REACT_APP_OT_TOS_RESOURCE: '$(react_app_ot_tos_resource)'
 
               REACT_APP_ANALYTICS_ENABLE: '$(react_app_analytics_enabled)'
               REACT_APP_ANALYTICS_MOCK: '$(react_app_analytics_mocked)'
