--- a/.github/workflows/code-review.yaml
+++ b/.github/workflows/code-review.yaml
@@ -2,15 +2,13 @@ name: Code Review
 
 on:
   workflow_dispatch:
-  # pull_request:
-  #   types: [opened, synchronize]
-  #   paths:
-  #     - "*"
-  #     - "!infra/*"
-  #     - "!.github/*"
-  push:
-    branches:
-      - devops-to-github-action
+  pull_request:
+    types: [opened, synchronize]
+    paths:
+      - "*"
+      - "!infra/*"
+      - "!.github/*"
+
 env:
   DANGER_GITHUB_API_TOKEN: ${{ secrets.DANGER_GITHUB_API_TOKEN }}
 
@@ -21,18 +19,6 @@ jobs:
     steps:
       - name: Check-out code
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
-
-      # Corepack is an official tool by Node.js that manages package managers versions
-
-      # This is needed to avoid
-      # Error: Error when performing the request to https://registry.npmjs.org/yarn/latest; 
-      # - name: Setup target Node.js to enable Corepack
-      #   uses: actions/setup-node@1e60f620b9541d16bece96c5465dc8ee9832be0b # v4.0.3
-      #   with:
-      #     node-version-file: ".node-version"
-
-      # - name: Setup yarn
-      #   run: corepack enable
 
       - name: Setup Node.js
         uses: actions/setup-node@1e60f620b9541d16bece96c5465dc8ee9832be0b # v4.0.3
