--- a/.github/workflows/deploy-pipelines.yaml
+++ b/.github/workflows/deploy-pipelines.yaml
@@ -44,7 +44,7 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  make-release:
+  release:
     if: github.ref == format('refs/heads/{0}', inputs.default_branch) || startsWith(github.ref, 'refs/tags/v') && endsWith(github.ref, '-RELEASE')
     runs-on: ubuntu-22.04
     permissions:
@@ -121,9 +121,9 @@ jobs:
             --notes-file CHANGELOG.md \
             $([[ "${{ inputs.release_semver }}" == "prerelease" ]] && echo "--prerelease")
       
-  make-build:
+  build:
     needs:
-    - make-release
+    - release
     runs-on: ubuntu-22.04
     if: inputs.environment == 'DEV' || success()
 
@@ -175,7 +175,9 @@ jobs:
         retention-days: 7
 
   deploy:
-    needs: [make-build]
+    needs:
+    - build
+    if: needs.build.result == 'success'
     runs-on: 'ubuntu-22.04'
     environment: ${{ inputs.environment == 'PROD' && 'prod-cd' || inputs.environment == 'UAT' && 'uat-cd' || 'dev-cd' }}
     permissions:
