--- a/.github/workflows/deploy-pipelines.yaml
+++ b/.github/workflows/deploy-pipelines.yaml
@@ -179,11 +179,25 @@ jobs:
       run: |
         echo "success=true" >> $GITHUB_OUTPUT
 
+  test1:
+    runs-on: ubuntu-latest
+    needs: build
+    if: ${{ needs.build.outputs.success == 'true' }}
+    steps:
+      - uses: actions/checkout@v3
+
+  test2:
+    runs-on: ubuntu-latest
+    needs: build
+    if: success()
+    steps:
+      - uses: actions/checkout@v3
+
   deploy:
     needs:
       - release
       - build
-    if:  ${{ needs.build.outputs.success == 'true' }}
+    if: ${{ needs.build.outputs.success == 'true' }}
     runs-on: 'ubuntu-22.04'
     environment: ${{ inputs.environment == 'PROD' && 'prod-cd' || inputs.environment == 'UAT' && 'uat-cd' || 'dev-cd' }}
     permissions:
@@ -256,3 +270,25 @@ jobs:
           ENDPOINT_NAME: selc-${{ steps.set-env.outputs.env_short }}-checkout-cdn-endpoint
           RESOURCE_GROUP: selc-${{ steps.set-env.outputs.env_short }}-checkout-fe-rg
           BASE_PATH: auth
+
+  test3:
+    runs-on: ubuntu-latest
+    needs: build
+    if: always()
+    steps:
+      - uses: actions/checkout@v3
+
+  test4:
+    runs-on: ubuntu-latest
+    needs: build
+    if: ${{ always() && needs.build.outputs.success == 'true' }}
+    steps:
+      - uses: actions/checkout@v3
+
+  test5:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v3
+      - run: |
+          echo "success: ${{ needs.build.outputs.success }}"
