--- a/.github/workflows/deploy-pipelines.yaml
+++ b/.github/workflows/deploy-pipelines.yaml
@@ -281,7 +281,7 @@ jobs:
   test4:
     runs-on: ubuntu-latest
     needs: build
-    if: ${{ always() && needs.build.outputs.success == 'true' }}
+    if: always() && success()
     steps:
       - uses: actions/checkout@v3
 
@@ -292,3 +292,21 @@ jobs:
       - uses: actions/checkout@v3
       - run: |
           echo "success: ${{ needs.build.outputs.success }}"
+
+  test6:
+    needs: build
+    runs-on: ubuntu-latest
+    if: success()
+    steps:
+      - name: Deploy step
+        run: echo "Deploying..."
+
+  test7:
+    needs:
+      - release 
+      - build
+    runs-on: ubuntu-latest
+    if: success()
+    steps:
+      - name: Deploy step
+        run: echo "Deploying..."
