--- a/.github/workflows/deploy-cdn.yml
+++ b/.github/workflows/deploy-cdn.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - main
       - releases/*
+      - devops-to-github-action
     paths:
       - "!.github/**"
       - "!.devops/**"
