--- a/.github/workflows/deploy-cdn.yml
+++ b/.github/workflows/deploy-cdn.yml
@@ -3,16 +3,16 @@ name: Deploy CDN
 on:
   push:
     branches:
-      - main
-      - releases/*
+      # - main
+      # - releases/*
       - devops-to-github-action
-    paths:
-      # - "!.github/**"
-      - "!.devops/**"
-      - "!infra/**"
-      - "!.pre-commit-config.yaml"
-      - "!.terraform-version"
-      - "!CODEOWNERS"
+    # paths:
+    #   - "!.github/**"
+    #   - "!.devops/**"
+    #   - "!infra/**"
+    #   - "!.pre-commit-config.yaml"
+    #   - "!.terraform-version"
+    #   - "!CODEOWNERS"
   
   workflow_dispatch:
     inputs:
