--- a/.github/workflows/deploy-cdn.yml
+++ b/.github/workflows/deploy-cdn.yml
@@ -25,7 +25,7 @@ on:
 
 jobs:
   release_and_deploy:
-    uses: pagopa/selfcare-commons/.github/workflows/call_release_cdn.yml@main
+    uses: pagopa/selfcare-commons/.github/workflows/call_release_cdn.yml@devops-to-github-action
     name: 'login frontend'
     secrets: inherit
     with:
