--- a/.github/workflows/deploy-cdn.yml
+++ b/.github/workflows/deploy-cdn.yml
@@ -5,14 +5,13 @@ on:
     branches:
       - main
       - releases/*
-      - devops-to-github-action
-    # paths:
-    #   - "!.github/**"
-    #   - "!.devops/**"
-    #   - "!infra/**"
-    #   - "!.pre-commit-config.yaml"
-    #   - "!.terraform-version"
-    #   - "!CODEOWNERS"
+    paths:
+      - "!.github/**"
+      - "!.devops/**"
+      - "!infra/**"
+      - "!.pre-commit-config.yaml"
+      - "!.terraform-version"
+      - "!CODEOWNERS"
   
   workflow_dispatch:
     inputs:
@@ -24,10 +23,9 @@ on:
         - uat
         - prod
 
-        
 jobs:
   release_and_deploy:
-    uses: pagopa/selfcare-commons/.github/workflows/call_release_cdn.yml@devops-to-github-action
+    uses: pagopa/selfcare-commons/.github/workflows/call_release_cdn.yml@main
     name: 'login frontend'
     secrets: inherit
     with:
