--- a/.github/workflows/deploy_cdn.yml
+++ b/.github/workflows/deploy_cdn.yml
@@ -30,6 +30,7 @@ jobs:
     secrets: inherit
     with:
       environment: ${{ inputs.env != null && inputs.env || (startsWith(github.ref_name, 'releases/') && 'uat') || 'dev' }}
+      file_environment: ${{ inputs.env != null && format('fe_{0}.env', inputs.env) || (startsWith(github.ref_name, 'releases/') && 'fe_uat.env') || 'fe_dev.dev' }}
       storage_account_name: "checkoutsa"
       profile_name: checkout-cdn-profile
       endpoint_name: checkout-cdn-endpoint
