--- a/.github/workflows/deploy_cdn.yml
+++ b/.github/workflows/deploy_cdn.yml
@@ -25,25 +25,13 @@ on:
 
 
 jobs:
-  compute_environment:
-    name: Compute Environment
-    runs-on: ubuntu-latest
-    outputs:
-      environment: ${{ steps.set_env.outputs.environment }}
-    steps:
-      - name: Determine Environment
-        id: set_env
-        run: |
-          echo "environment=${{ inputs.env != null && inputs.env || (startsWith(github.ref_name, 'releases/') && 'uat') || 'dev' }}" >> $GITHUB_OUTPUT
-  
   release_and_deploy:
     uses: pagopa/selfcare-commons/.github/workflows/call_release_cdn.yml@main
-    name: "Release ${{ needs.compute_environment.outputs.environment }}"
-    needs: compute_environment
+    name: "Release${{ inputs.env != null && inputs.env || (startsWith(github.ref_name, 'releases/') && 'uat') || 'dev' }}"
     secrets: inherit
     with:
-      environment: ${{ needs.compute_environment.outputs.environment }}
-      file_environment: ${{ format('fe_{0}.env', needs.compute_environment.outputs.environment) }}
+      environment: ${{ inputs.env != null && inputs.env || (startsWith(github.ref_name, 'releases/') && 'uat') || 'dev' }}
+      file_environment: ${{ format('fe_{0}.env', (inputs.env != null && inputs.env || (startsWith(github.ref_name, 'releases/') && 'uat') || 'dev')) }}
       storage_account_name: "checkoutsa"
       profile_name: checkout-cdn-profile
       endpoint_name: checkout-cdn-endpoint
